update advanced page

--- a/advanced.html
+++ b/advanced.html
@@ -8,7 +8,7 @@
         <div>
             <div class="navbar">
                 <img class="navbar-left" height="25px" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" />
-                <a class="navbar-pad" href="index.html">Advanced Search</a>
+                <a class="navbar-pad" href="index.html">Google Search</a>
                 <a class="navbar-pad" href="image.html">Image Search</a>
             </div>
             <div class="ad-bar">Advanced Search</div>
@@ -43,7 +43,8 @@
                                 <input class="ad-textinput" style="width:150px" name="as_nhi" type="text"> </div> 
                             </div>
                     </div>
-            </div>
+                    <input class="ad-searchbutton" value="Advanced Search" type="submit">
+                </div>
         </form>
     </body>
 </html>
